# Bank2YNAB4

./: .gitignore  LICENSE  README.md  bank2ynab.py  bank2ynab.pyw  banks.py  converter.py  pyproject.toml  ynabCSV.py
banks/: ica_banken_v1.toml  nordea_v2.toml  revolut_v1.toml  revolut_v2.toml
banks/template/: template.toml
scripts/: fix_revolut.py
scripts/fix_revolut/: README.md  fix_revolut.py  revolut_v1_example.csv  test_fix_revolut.py
src/: config.py  converter.py
tests/: test_config.py  test_converter.py  test_fix_revolut.py  test_regression.py  util.py
tests/example_csv/: example_ynab.csv  ica_banken_v1.csv  nordea_v2.csv  revolut_v2.csv
tests/example_csv/regression/: revolut_v2_regression_01.csv
