[tool.poetry]
name = "bank2ynab"
description = ""
authors = ["Adrian Nilsson"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
tomli = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
hypothesis = "^6.14.1"
black = "^24.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
